결제, 댓글, 답글 기능 완료